<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/add_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        />


    <TextView
        android:id="@+id/add_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/BT" />


    <Spinner
        android:id="@+id/add_type_spin"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        ></Spinner>


    <TextView
        android:id="@+id/add_row_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BLocation"
        android:textSize="20dp"
        />


    <EditText
        android:id="@+id/add_row_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />


    <TextView
        android:id="@+id/add_batch_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BBatch"
        tools:layout_editor_absoluteX="187dp"
        android:textSize="20dp"
        tools:layout_editor_absoluteY="414dp" />

    <EditText
        android:id="@+id/add_batch_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />


    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/AddButtonText"

        />

</LinearLayout >